fix: resolve bugs, security permissions, lifecycle leaks, and optimizations
- UI: add empty state to scene graph in MainView when zero resources match
- UI: populate FreeRDP engine choices in SettingsDialog and add text null guards
- UI: add missing Restart Session item to ResourceCard context menu
- UI: use AppState.runOnFxThread to avoid redundant event loop deferrals
- Lifecycle: stop all active RDP sessions in AppState.shutdown() to prevent orphans
- Lifecycle: cancel WebEngine loaders and unload about:blank in AuthDialog on close
- Lifecycle: reset autoConnectTriggered and lastSynced upon user sign-out
- Lifecycle: reschedule auto-refresh task dynamically when updated in settings
- Lifecycle: deduplicate and focus active AuthDialog instances in AppState
- Auth: silently refresh tokens expiring soon before RDP download in connectResource
- Auth: guard TokenResponse expiresAt arithmetic against overflow
- Auth: unwrap MSAL CompletionException and cache PublicClientApplication by tenant
- Auth: make OAuthCallback isRedirect null-safe and support port normalization
- Auth: fix SessionAuthDialog URL fragment query reconstruction when stripping select_account
- Security: enforce 0600 POSIX permissions on active and downloaded RDP files
- Security: enforce 0700 POSIX permissions on feed and log storage directories
- Security: expand log credential redaction for FreeRDP /p: and gateway token flags
- Security: zero memory char arrays and spec in MachineBoundCrypto key derivation
- Security: purge cached icon images from disk upon user sign-out in WorkspaceCache
- Performance: cache machine ID in MachineBoundCrypto to eliminate disk stat calls
- Performance: optimize XdgPaths log pruning to avoid TimSort stat syscall thrashing
- Performance: statically cache secure DocumentBuilderFactory in WorkspaceFeedParser
- Performance: replace virtual thread pooling with semaphore throttle in WorkspaceFeedClient
- Performance: initialize SDL FreeRDP keybinding configuration once pe