@@ -2,8 +2,8 @@ package org.alaurie.jw365.util;
 
 import java.io.File;
 import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Optional;
 
 /** Locates executable files on the current process PATH. */
@@ -18,9 +18,15 @@ public final class ExecutableLocator {
         }
 
         for (String dir : pathEnv.split(File.pathSeparator)) {
-            Path candidate = Paths.get(dir, executableName);
-            if (Files.isExecutable(candidate) && !Files.isDirectory(candidate)) {
-                return Optional.of(candidate.toAbsolutePath());
+            if (dir == null || dir.isBlank()) {
+                continue;
+            }
+            try {
+                Path candidate = Path.of(dir, executableName);
+                if (Files.isExecutable(candidate) && !Files.isDirectory(candidate)) {
+                    return Optional.of(candidate.toAbsolutePath());
+                }
+            } catch (InvalidPathException | SecurityException _) {
             }
         }
         return Optional.empty();
